--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run start:react\" \"npm run start:server\"",
+    "start:react": "vite",
+    "start:server": "node server.cjs",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -13,6 +15,8 @@
   "dependencies": {
     "@fontsource/roboto": "^5.0.1",
     "@heroicons/react": "^2.0.18",
+    "concurrently": "^8.0.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
