--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.1",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.13.2",
     "concurrently": "^8.0.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
