--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.1",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "concurrently": "^8.0.1",
     "express": "^4.18.2",
