--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.0.1",
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.2",
     "concurrently": "^8.0.1",
     "express": "^4.18.2",
