--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.2",
     "sqlite3": "^5.1.6",
     "zustand": "^4.3.8"
